--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	
+	<h3>Lexical Environment</h3>
+	<h3>The execution context - Creation and hoisting</h3>
+	<h3>closures</h3>
+	<h3>=== vs ==</h3>
+	<h3>Why to use semi-colons</h3>
+	<h3>The scope chain</h3>
+
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
