--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h3>=== vs ==</h3>
 	<h3>Why to use semi-colons</h3>
 	<h3>The scope chain</h3>
-
+	<h3>Test</h3>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
