Added more content

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 	<h3>closures</h3>
 	<h3>=== vs ==</h3>
 	<h3>Why to use semi-colons</h3>
+	<p>function getStuff() {
+		return 	
+		{
+			status: true
+		}
+	}
+	</p>
+	<p>function getStuff() {
+		return {
+			status: true
+		}
+	}
+	</p>
+	<p>Minified code</p>
 	<h3>The scope chain</h3>
 	<h3>Test</h3>
 	<script type="text/javascript" src="app.js"></script>
